Fix overflow-x in share-table-div in members page

--- a/static/css/sandik/members.css
+++ b/static/css/sandik/members.css
@@ -83,11 +83,12 @@
   display:none;
 }
 
-.share-div{
+.share-table-div{
   padding-left: 40px;
   padding-right: 40px;
   padding-top: 15px;
   padding-bottom: 10px;
+  overflow-x:auto;
 }
 
 .table-sandik-shares,
